@@ -1,13 +1,13 @@
 # FIXME: someday we may need to handle installing into non-lib.
-debian/tmp-libc/lib/ld*.so* lib
-debian/tmp-libc/lib/libm-*.so* lib
-debian/tmp-libc/lib/libm.so* lib
-debian/tmp-libc/lib/libdl*.so* lib
-debian/tmp-libc/lib/libresolv*.so* lib
-debian/tmp-libc/lib/libc-*.so* lib
-debian/tmp-libc/lib/libc.so* lib
-debian/tmp-libc/lib/libutil* lib
-debian/tmp-libc/lib/libcrypt* lib
+debian/tmp-udeb/lib/ld*.so* lib
+debian/tmp-udeb/lib/libm-*.so* lib
+debian/tmp-udeb/lib/libm.so* lib
+debian/tmp-udeb/lib/libdl*.so* lib
+debian/tmp-udeb/lib/libresolv*.so* lib
+debian/tmp-udeb/lib/libc-*.so* lib
+debian/tmp-udeb/lib/libc.so* lib
+debian/tmp-udeb/lib/libutil* lib
+debian/tmp-udeb/lib/libcrypt* lib
 # FIXME: This should be with_threads arch's only.
-debian/tmp-libc/lib/libpthread*.so* lib
+debian/tmp-udeb/lib/libpthread*.so* lib
 
