@@ -1,3 +1,3 @@
 # FIXME: someday we may need to handle installing into non-lib.
-debian/tmp-libc/lib/libnss_dns*.so* lib
+debian/tmp-udeb/lib/libnss_dns*.so* lib
 
