@@ -86,7 +86,7 @@ ifdef SETNJOBS
 endif
 
 # Default setup
-GLIBC_PASSES ?= libc
+GLIBC_PASSES ?= libc udeb
 
 prefix=/usr
 bindir=$(prefix)/bin
@@ -97,6 +97,10 @@ docdir=$(prefix)/share/doc
 mandir=$(prefix)/share/man
 sbindir=$(prefix)/sbin
 libexecdir=$(prefix)/lib
+
+udeb_add-ons = linuxthreads $(add-ons)
+udeb_rtlddir = /lib
+udeb_slibdir = /lib
 
 BUILD_CC = gcc-4.0
 
