@@ -1,0 +1,1 @@
+udeb_MIN_KERNEL_SUPPORTED = 2.4.1
