@@ -1,6 +1,8 @@
 GLIBC_PASSES += ppc64 nptl
 DEB_ARCH_REGULAR_PACKAGES += libc6-ppc64 libc6-dev-ppc64
 
+udeb_MIN_KERNEL_SUPPORTED = 2.4.1
+
 ppc64_MIN_KERNEL_SUPPORTED = 2.6.0
 ppc64_configure_target = powerpc64-linux
 ppc64_CC = $(CC) -m64
