@@ -6,6 +6,10 @@ glibc (2.3.6-10) UNRELEASED; urgency=low
   * Add patches/arm/local-softfloat.diff (support for arm softfloat).  (Closes:
     #358772)
   * debian/rules.d/control.mk: Add arm-softfloat to the architectures list.
+  * Do a separate pass for the udeb package, so that it could use different
+    build options.
+  * Set the minimum kernel to 2.6.1 for the udeb package, except for i386,
+    m68k, mips, mipsel, powerpc and s390.
 
  -- Aurelien Jarno <aurel32@debian.org>  Fri, 19 May 2006 05:49:18 +0000
 
